--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,10 @@ set -g status-justify centre
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # keep at bottom
 run '~/.tmux/plugins/tpm/tpm'
